# network-analysis-lab

./: README.md  analyze.py  pyproject.toml  requirements.txt
dashboard/: app.py
dashboard/templates/: index.html
src/analysis/: analyzer.py
src/core/: pcap_reader.py  pcap_writer.py
tests/: test_core.py
tools/: generate_sample.py
