[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "network-analysis-lab"
version = "1.0.0"
description = "Hands-on network forensics lab: packet capture, protocol dissection, and anomaly detection"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["network", "pcap", "wireshark", "security", "forensics", "soc"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Topic :: System :: Networking :: Monitoring",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "flask>=3.0.0",
  "click>=8.0.0",
  "tabulate>=0.9.0",
  "colorama>=0.4.6",
]

[project.scripts]
nal-analyze = "analyze:main"

[project.urls]
Homepage   = "https://github.com/yourusername/network-analysis-lab"
Issues     = "https://github.com/yourusername/network-analysis-lab/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
